# AeolusPart1

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DISPLAY_IMAGE.cpp  DISPLAY_PIXELS.cpp  FIND_PERIMETER.cpp  FIND_REGION.cpp  Makefile  README.md  README.md~  SAVE_PIXELS.cpp  cmake_install.cmake  displayimage  displaypixels  find  operations.h  perimeter  region  savepixels  view
