cmake_minimum_required(VERSION 2.8)
project( view )
find_package( OpenCV REQUIRED )
add_executable( view view.cpp )
add_executable( region FIND_REGION.cpp operations.h)
add_executable( perimeter FIND_PERIMETER.cpp operations.h)
target_link_libraries( view ${OpenCV_LIBS} )
target_link_libraries( region ${OpenCV_LIBS} )
target_link_libraries( perimeter ${OpenCV_LIBS} )

